Fixed z-index for server list

--- a/css/global.css
+++ b/css/global.css
@@ -342,7 +342,7 @@ input, textarea, select {
 		width:100%;
 		height:100%;
 		overflow: hidden;
-		z-index:999999;
+		z-index:9999;
 		
 	}
 	
